--- a/final_simulation/model_training_dqn.ipynb
+++ b/final_simulation/model_training_dqn.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "from final_simulation._env.simplest_intersection import SimplestIntersection\n",
     "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation\n",
-    "from stable_baselines3 import A2C\n",
+    "from stable_baselines3 import DQN\n",
     "from stable_baselines3.common.monitor import Monitor\n",
     "import os"
    ]
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_dir = \"final_simulation\\\\_models\\\\reward_07\\\\a2c\"\n",
+    "log_dir = \"final_simulation\\\\_models\\\\reward_07\\\\dqn\"\n",
     "os.makedirs(log_dir, exist_ok=True)\n",
     "\n",
     "# Sim time 1 minute\n",
@@ -164,65 +164,13 @@
       "|    value_loss         | 2.19e+03  |\n",
       "-------------------------------------\n",
       "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "-------------------------------------\n",
-      "| rollout/              |           |\n",
-      "|    ep_len_mean        | 119       |\n",
-      "|    ep_rew_mean        | -2.94e+03 |\n",
-      "| time/                 |           |\n",
-      "|    fps                | 6         |\n",
-      "|    iterations         | 300       |\n",
-      "|    time_elapsed       | 222       |\n",
-      "|    total_timesteps    | 1500      |\n",
-      "| train/                |           |\n",
-      "|    entropy_loss       | -7.78e-05 |\n",
-      "|    explained_variance | 0         |\n",
-      "|    learning_rate      | 0.01      |\n",
-      "|    n_updates          | 299       |\n",
-      "|    policy_loss        | -0.000481 |\n",
-      "|    value_loss         | 9.39e+03  |\n",
-      "-------------------------------------\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "-------------------------------------\n",
-      "| rollout/              |           |\n",
-      "|    ep_len_mean        | 119       |\n",
-      "|    ep_rew_mean        | -2.99e+03 |\n",
-      "| time/                 |           |\n",
-      "|    fps                | 6         |\n",
-      "|    iterations         | 400       |\n",
-      "|    time_elapsed       | 294       |\n",
-      "|    total_timesteps    | 2000      |\n",
-      "| train/                |           |\n",
-      "|    entropy_loss       | -0.000114 |\n",
-      "|    explained_variance | 0         |\n",
-      "|    learning_rate      | 0.01      |\n",
-      "|    n_updates          | 399       |\n",
-      "|    policy_loss        | -0.000939 |\n",
-      "|    value_loss         | 1.46e+04  |\n",
-      "-------------------------------------\n",
-      "saving observation file..\n",
-      "No simulation running.\n",
-      "saving observation file..\n",
       "No simulation running.\n"
      ]
     }
    ],
    "source": [
     "# Define agent\n",
-    "model = A2C('MultiInputPolicy', env, verbose=1, device='auto', learning_rate=0.01)\n",
+    "model = DQN('MultiInputPolicy', env, device='auto',learning_rate=0.01, exploration_initial_eps=1, exploration_final_eps=0.01, verbose=1)\n",
     "# Train the agent\n",
     "model.learn(total_timesteps=int(max_simulation_seconds*number_episodes))\n",
     "model.save(\"{0}\\\\trained_model\".format(log_dir))"
