Incremental (Model training)

--- a/final_simulation/model_evaluation_static.ipynb
+++ b/final_simulation/model_evaluation_static.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -84,43 +84,6 @@
      "output_type": "stream",
      "text": [
       "No simulation running.\n",
-      "{'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
-      "routes                                                          \n",
-      "east_to_north                0.0           0.0       0.000000   \n",
-      "east_to_south                0.0           0.0       0.000000   \n",
-      "east_to_west                 0.0           0.0       0.000000   \n",
-      "north_to_east                0.0           0.0       0.000000   \n",
-      "north_to_south               9.0           4.0       3.403641   \n",
-      "north_to_west                4.0           3.0       0.621403   \n",
-      "south_to_east                0.0           0.0       0.000000   \n",
-      "south_to_north              14.0           8.0       2.591790   \n",
-      "south_to_west                0.0           0.0       0.000000   \n",
-      "west_to_east                 0.0           0.0       0.000000   \n",
-      "west_to_north                2.0           0.0       9.911546   \n",
-      "west_to_south                2.0           2.0       0.000000   \n",
-      "\n",
-      "                accumulated_waiting_time  new_throughput  \n",
-      "routes                                                    \n",
-      "east_to_north                        0.0             0.0  \n",
-      "east_to_south                        0.0             0.0  \n",
-      "east_to_west                         0.0             0.0  \n",
-      "north_to_east                        0.0             0.0  \n",
-      "north_to_south                     138.0             1.0  \n",
-      "north_to_west                       67.0             0.0  \n",
-      "south_to_east                        0.0             0.0  \n",
-      "south_to_north                     266.0             0.0  \n",
-      "south_to_west                        0.0             0.0  \n",
-      "west_to_east                         0.0             0.0  \n",
-      "west_to_north                        0.0             0.0  \n",
-      "west_to_south                       50.0             0.0  , 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 5, 'simulation_time': 100.0, 'reward': 0.058823529411764705}\n",
-      "\n",
-      "            Total Time Steps: 100\n",
-      "            Previous Signal: GrrrGrrr\n",
-      "            Total Signal Changes: 11\n",
-      "            Total Throughput: 34.0\n",
-      "            Total Wait Time: 21781.0\n",
-      "            Total Reward: -29.46769800460977\n",
-      "            \n",
       "saving observation file..\n",
       "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
       "routes                                                          \n",
@@ -150,7 +113,7 @@
       "south_to_west                        0.0             0.0  \n",
       "west_to_east                         0.0             0.0  \n",
       "west_to_north                        0.0             0.0  \n",
-      "west_to_south                       79.0             0.0  , 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 1, 'simulation_time': 180.0, 'reward': 0.0, 'episode': {'r': -59.462566, 'l': 179, 't': 120.564523}}\n",
+      "west_to_south                       79.0             0.0  , 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 1, 'simulation_time': 180.0, 'reward': 0.0}\n",
       "\n",
       "            Total Time Steps: 180\n",
       "            Previous Signal: GrrrGrrr\n",
@@ -171,22 +134,12 @@
     "    step += 1\n",
     "    observation, reward, done, info = env.step(0)\n",
     "\n",
-    "    if step % 100 == 0:\n",
-    "        print(info)\n",
-    "        env.render(mode='console')\n",
     "    if done:\n",
     "        #print(\"Goal reached!\", \"reward=\", env._total_reward)\n",
-    "        print(info)\n",
+    "        print(\"info:\", info)\n",
     "        env.render(mode='console')\n",
     "        break\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
