--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -164,18 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_09\\\\ppo\\\\best_model.zip\")\n",
-    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_07\\\\a2c\\\\trained_model.zip\")\n",
+    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_10\\\\ppo\\\\best_model.zip\")\n",
+    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
     "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -187,39 +187,39 @@
       "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
       "routes                                                          \n",
       "east_to_north                0.0           0.0       0.000000   \n",
-      "east_to_south                1.0           1.0       0.000000   \n",
-      "east_to_west                 2.0           2.0       0.000490   \n",
+      "east_to_south                0.0           0.0       0.000000   \n",
+      "east_to_west                 1.0           1.0       0.000000   \n",
       "north_to_east                0.0           0.0       0.000000   \n",
-      "north_to_south               3.0           0.0      11.369801   \n",
-      "north_to_west                1.0           0.0       8.973515   \n",
+      "north_to_south               4.0           1.0       8.577890   \n",
+      "north_to_west                1.0           0.0       9.423480   \n",
       "south_to_east                0.0           0.0       0.000000   \n",
-      "south_to_north               7.0           0.0       4.410570   \n",
-      "south_to_west                1.0           0.0       9.559707   \n",
-      "west_to_east                 0.0           0.0       0.000000   \n",
-      "west_to_north                2.0           0.0       7.727770   \n",
-      "west_to_south                2.0           1.0       5.281968   \n",
+      "south_to_north              13.0           1.0       2.744039   \n",
+      "south_to_west                1.0           0.0       9.043985   \n",
+      "west_to_east                 1.0           1.0       0.000000   \n",
+      "west_to_north                7.0           6.0       2.503527   \n",
+      "west_to_south                4.0           3.0       2.861599   \n",
       "\n",
       "                accumulated_waiting_time  new_throughput  \n",
       "routes                                                    \n",
       "east_to_north                        0.0             0.0  \n",
-      "east_to_south                       24.0             0.0  \n",
-      "east_to_west                        46.0             0.0  \n",
+      "east_to_south                        0.0             0.0  \n",
+      "east_to_west                         3.0             0.0  \n",
       "north_to_east                        0.0             0.0  \n",
-      "north_to_south                       0.0             0.0  \n",
+      "north_to_south                       3.0             0.0  \n",
       "north_to_west                        0.0             0.0  \n",
       "south_to_east                        0.0             0.0  \n",
-      "south_to_north                       2.0             0.0  \n",
+      "south_to_north                       6.0             0.0  \n",
       "south_to_west                        0.0             0.0  \n",
-      "west_to_east                         0.0             0.0  \n",
-      "west_to_north                        0.0             0.0  \n",
-      "west_to_south                       20.0             0.0  , 'signal_state': 5, 'previous_signal_state': 2, 'previous_signal_active_time': 2, 'simulation_time': 180.0, 'reward': -24.0}\n",
+      "west_to_east                        43.0             0.0  \n",
+      "west_to_north                      106.0             0.0  \n",
+      "west_to_south                      135.0             0.0  , 'signal_state': 0, 'previous_signal_state': 0, 'previous_signal_active_time': 3, 'simulation_time': 180.0, 'reward': -13.0}\n",
       "\n",
       "            Total Time Steps: 180\n",
-      "            Previous Signal: rrryrrry\n",
-      "            Total Signal Changes: 106\n",
-      "            Total Throughput: 95.0\n",
-      "            Total Wait Time: 17192.0\n",
-      "            Total Reward: -1490.0\n",
+      "            Previous Signal: rgrrrgrr\n",
+      "            Total Signal Changes: 79\n",
+      "            Total Throughput: 82.0\n",
+      "            Total Wait Time: 27851.0\n",
+      "            Total Reward: -1457.0\n",
       "            \n"
      ]
     }
@@ -240,6 +240,13 @@
     "        env.render()\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
