--- a/final_simulation/model_evaluation_static.ipynb
+++ b/final_simulation/model_evaluation_static.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,22 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tabnanny import verbose\n",
-    "from stable_baselines3.common.env_checker import check_env\n",
     "from final_simulation._env.real_intersection_static import RealIntersectionStatic\n",
-    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation\n",
-    "from stable_baselines3.common.evaluation import evaluate_policy\n",
-    "from stable_baselines3.common.monitor import Monitor\n",
-    "import os"
+    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
