--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -242,11 +242,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward 11"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from final_simulation._env.real_intersection import RealIntersection11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sim time 1 minute\n",
+    "max_simulation_seconds = 180\n",
+    "\n",
+    "simulation = SumoSimulation(\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "env = RealIntersection11(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_11\\\\ppo\\\\best_model.zip\")\n",
+    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
+    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
+      "routes                                                          \n",
+      "east_to_north                0.0           0.0       0.000000   \n",
+      "east_to_south                0.0           0.0       0.000000   \n",
+      "east_to_west                 1.0           1.0       0.000000   \n",
+      "north_to_east                0.0           0.0       0.000000   \n",
+      "north_to_south               3.0           0.0       9.267559   \n",
+      "north_to_west                1.0           0.0      10.001836   \n",
+      "south_to_east                0.0           0.0       0.000000   \n",
+      "south_to_north               5.0           2.0       6.925669   \n",
+      "south_to_west                1.0           0.0      10.379301   \n",
+      "west_to_east                 0.0           0.0       0.000000   \n",
+      "west_to_north                1.0           0.0      12.789200   \n",
+      "west_to_south                1.0           0.0      12.015986   \n",
+      "\n",
+      "                accumulated_waiting_time  new_throughput  \n",
+      "routes                                                    \n",
+      "east_to_north                        0.0             0.0  \n",
+      "east_to_south                        0.0             0.0  \n",
+      "east_to_west                         4.0             0.0  \n",
+      "north_to_east                        0.0             0.0  \n",
+      "north_to_south                       0.0             0.0  \n",
+      "north_to_west                        0.0             0.0  \n",
+      "south_to_east                        0.0             0.0  \n",
+      "south_to_north                       6.0             0.0  \n",
+      "south_to_west                        0.0             0.0  \n",
+      "west_to_east                         0.0             0.0  \n",
+      "west_to_north                        0.0             0.0  \n",
+      "west_to_south                        0.0             0.0  , 'signal_state': 0, 'previous_signal_state': 2, 'previous_signal_active_time': 5, 'simulation_time': 180.0, 'reward': -13.0}\n",
+      "\n",
+      "            Total Time Steps: 180\n",
+      "            Previous Signal: rgrrrgrr\n",
+      "            Total Signal Changes: 82\n",
+      "            Total Throughput: 101.0\n",
+      "            Total Wait Time: 3196.0\n",
+      "            Total Reward: -5514.0\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "observation = env.reset()\n",
+    "\n",
+    "while True:\n",
+    "    #observation = observation[np.newaxis, ...]\n",
+    "\n",
+    "    # action = env.action_space.sample()\n",
+    "    action, _states = model.predict(observation)\n",
+    "    observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "    # env.render()\n",
+    "    if done:\n",
+    "        print(\"info:\", info)\n",
+    "        env.render()\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
