--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -357,6 +357,99 @@
     "        env.render()\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward 12 (Simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from final_simulation._env.real_intersection import RealIntersectionSimpleObs12\n",
+    "from final_simulation._sumo.simplest_intersection_simulation import SumoSimulationSimpleObs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sim time 1 minute\n",
+    "max_simulation_seconds = 180\n",
+    "\n",
+    "simulation = SumoSimulationSimpleObs(\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "env = RealIntersectionSimpleObs12(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PPO.load(\"final_simulation\\\\_models\\\\reward_12\\\\simple\\\\ppo\\\\best_model.zip\")\n",
+    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_10\\\\a2c\\\\best_model.zip\")\n",
+    "#model = DQN.load(\"final_simulation\\\\_models\\\\reward_07\\\\dqn\\\\trained_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "info: {'traffic':        stopped_cars\n",
+      "entry              \n",
+      "east              7\n",
+      "north             0\n",
+      "south             0\n",
+      "west             15, 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 2, 'simulation_time': 180.0, 'reward': -12.0}\n",
+      "\n",
+      "            Total Time Steps: 180\n",
+      "            Total Signal Changes: 34\n",
+      "            Total Throughput: 82\n",
+      "            Total Reward: -1298.0\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "observation = env.reset()\n",
+    "\n",
+    "while True:\n",
+    "    #observation = observation[np.newaxis, ...]\n",
+    "\n",
+    "    # action = env.action_space.sample()\n",
+    "    action, _states = model.predict(observation)\n",
+    "    observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "    # env.render()\n",
+    "    if done:\n",
+    "        print(\"info:\", info)\n",
+    "        env.render()\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
