--- a/final_simulation/model_training_dqn.ipynb
+++ b/final_simulation/model_training_dqn.ipynb
@@ -26,38 +26,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from final_simulation._env.real_intersection import RealIntersection8, RealIntersection10, RealIntersection11\n",
-    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation\n",
+    "from final_simulation._env.real_intersection import RealIntersection8, RealIntersection10, RealIntersection11, RealIntersectionSimpleObs12\n",
+    "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation, SumoSimulationSimpleObs\n",
     "from stable_baselines3 import DQN\n",
     "from stable_baselines3.common.monitor import Monitor\n",
     "from final_simulation._env.callbacks import SaveOnBestTrainingRewardCallback\n",
@@ -2985,6 +2957,84 @@
    "source": [
     "# Define agent\n",
     "model = DQN('MultiInputPolicy', env, device='auto',learning_rate=0.001, exploration_initial_eps=1, exploration_final_eps=0.01, verbose=1)\n",
+    "# Train the agent\n",
+    "model.learn(total_timesteps=int(max_simulation_seconds*number_episodes),callback=callback)\n",
+    "model.save(\"{0}\\\\final_model\".format(log_dir))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward 12 (Simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_dir = \"final_simulation\\\\_models\\\\reward_12\\\\simple\\\\dqn\"\n",
+    "os.makedirs(log_dir, exist_ok=True)\n",
+    "\n",
+    "# Sim time 1 minute\n",
+    "max_simulation_seconds = 180\n",
+    "number_episodes = 500\n",
+    "\n",
+    "# Save best check frequency\n",
+    "check_freq = max_simulation_seconds * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define simulation\n",
+    "simulation = SumoSimulationSimpleObs(\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "# Define environment\n",
+    "env = RealIntersectionSimpleObs12(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")\n",
+    "\n",
+    "# Logs will be saved in log_dir/monitor.csv\n",
+    "env = Monitor(env, log_dir)\n",
+    "\n",
+    "# Callback\n",
+    "callback = SaveOnBestTrainingRewardCallback(check_freq=check_freq,log_dir=log_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "No simulation running.\n",
+      "saving observation file..\n",
+      "No simulation running.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define agent\n",
+    "model = DQN('MlpPolicy', env, device='auto',learning_rate=0.001, exploration_initial_eps=1, exploration_final_eps=0.01, verbose=1)\n",
     "# Train the agent\n",
     "model.learn(total_timesteps=int(max_simulation_seconds*number_episodes),callback=callback)\n",
     "model.save(\"{0}\\\\final_model\".format(log_dir))"
