--- a/final_simulation/model_evaluation_static.ipynb
+++ b/final_simulation/model_evaluation_static.ipynb
@@ -71,70 +71,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Episode:  1\n",
+      "saving observation file..\n",
+      "Episode:  2\n",
       "No simulation running.\n",
       "saving observation file..\n",
-      "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
-      "routes                                                          \n",
-      "east_to_north                0.0           0.0       0.000000   \n",
-      "east_to_south                0.0           0.0       0.000000   \n",
-      "east_to_west                 1.0           1.0       0.003684   \n",
-      "north_to_east                0.0           0.0       0.000000   \n",
-      "north_to_south              12.0           9.0       1.885882   \n",
-      "north_to_west                6.0           5.0       1.785396   \n",
-      "south_to_east                0.0           0.0       0.000000   \n",
-      "south_to_north              17.0          14.0       0.906130   \n",
-      "south_to_west                1.0           0.0       9.763286   \n",
-      "west_to_east                 0.0           0.0       0.000000   \n",
-      "west_to_north                1.0           0.0      12.257269   \n",
-      "west_to_south                3.0           2.0       3.757713   \n",
-      "\n",
-      "                accumulated_waiting_time  new_throughput  \n",
-      "routes                                                    \n",
-      "east_to_north                        0.0             0.0  \n",
-      "east_to_south                        0.0             0.0  \n",
-      "east_to_west                         4.0             0.0  \n",
-      "north_to_east                        0.0             0.0  \n",
-      "north_to_south                     276.0             0.0  \n",
-      "north_to_west                      199.0             0.0  \n",
-      "south_to_east                        0.0             0.0  \n",
-      "south_to_north                     455.0             0.0  \n",
-      "south_to_west                        0.0             0.0  \n",
-      "west_to_east                         0.0             0.0  \n",
-      "west_to_north                        0.0             0.0  \n",
-      "west_to_south                       79.0             0.0  , 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 1, 'simulation_time': 180.0, 'reward': 0.0}\n",
-      "\n",
-      "            Total Time Steps: 180\n",
-      "            Previous Signal: GrrrGrrr\n",
-      "            Total Signal Changes: 19\n",
-      "            Total Throughput: 73.0\n",
-      "            Total Wait Time: 61813.0\n",
-      "            Total Reward: -59.462566316065946\n",
-      "            \n"
+      "Episode:  3\n",
+      "No simulation running.\n",
+      "saving observation file..\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "\n",
-    "observation = env.reset()\n",
-    "step = 1\n",
-    "while True:\n",
+    "info_df = pd.DataFrame()\n",
+    "n_episodes = 3\n",
     "\n",
-    "    step += 1\n",
-    "    observation, reward, done, info = env.step(0)\n",
+    "for episode in range(1,n_episodes + 1):\n",
     "\n",
-    "    if done:\n",
-    "        #print(\"Goal reached!\", \"reward=\", env._total_reward)\n",
-    "        print(\"info:\", info)\n",
-    "        env.render(mode='console')\n",
-    "        break\n"
+    "    print(\"Episode: \", episode)\n",
+    "\n",
+    "    observation = env.reset()\n",
+    "    step = 0\n",
+    "    done = False\n",
+    "\n",
+    "    while done != True:\n",
+    "\n",
+    "        step += 1\n",
+    "        observation, reward, done, info = env.step(0)\n",
+    "\n",
+    "        data_store = info['traffic'].sum(axis=0).to_dict()\n",
+    "        for key, value in data_store.items():\n",
+    "            data_store[key] = [value]\n",
+    "        data_store['episode'] = [episode]\n",
+    "        data_store['step'] = [step]\n",
+    "        step_traffic_df = pd.DataFrame(data=data_store)\n",
+    "        info_df = pd.concat(\n",
+    "            [info_df,step_traffic_df],\n",
+    "            ignore_index=True\n",
+    "        )\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>approaching_cars</th>\n",
+       "      <th>stopped_cars</th>\n",
+       "      <th>average_speed</th>\n",
+       "      <th>accumulated_waiting_time</th>\n",
+       "      <th>new_throughput</th>\n",
+       "      <th>episode</th>\n",
+       "      <th>step</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.611669</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.427849</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.504238</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54.883311</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>532</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.314338</td>\n",
+       "      <td>995.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>533</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>19.083511</td>\n",
+       "      <td>1026.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>534</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>20.324614</td>\n",
+       "      <td>1059.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>535</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>24.966581</td>\n",
+       "      <td>982.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>536</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>30.359361</td>\n",
+       "      <td>1013.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>179</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>537 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     approaching_cars  stopped_cars  average_speed  accumulated_waiting_time  \\\n",
+       "0                 4.0           0.0       0.000000                       0.0   \n",
+       "1                 4.0           0.0      15.611669                       0.0   \n",
+       "2                 8.0           0.0      24.427849                       0.0   \n",
+       "3                 8.0           0.0      39.504238                       0.0   \n",
+       "4                 8.0           0.0      54.883311                       0.0   \n",
+       "..                ...           ...            ...                       ...   \n",
+       "532              42.0          31.0      17.314338                     995.0   \n",
+       "533              43.0          33.0      19.083511                    1026.0   \n",
+       "534              43.0          35.0      20.324614                    1059.0   \n",
+       "535              41.0          33.0      24.966581                     982.0   \n",
+       "536              41.0          31.0      30.359361                    1013.0   \n",
+       "\n",
+       "     new_throughput  episode  step  \n",
+       "0               0.0        1     1  \n",
+       "1               0.0        1     2  \n",
+       "2               0.0        1     3  \n",
+       "3               0.0        1     4  \n",
+       "4               0.0        1     5  \n",
+       "..              ...      ...   ...  \n",
+       "532             0.0        3   175  \n",
+       "533             0.0        3   176  \n",
+       "534             1.0        3   177  \n",
+       "535             2.0        3   178  \n",
+       "536             0.0        3   179  \n",
+       "\n",
+       "[537 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
