--- a/final_simulation/model_evaluation.ipynb
+++ b/final_simulation/model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'D:\\\\Study\\\\RMIT\\\\2022\\\\COSC2793 - Computational Machine Learning\\\\Assignment02\\\\CML-Assign2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,9 +24,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "from final_simulation._env.simplest_intersection import SimplestIntersection\n",
     "from final_simulation._sumo.simplest_intersection_simulation import SignalStates, SumoSimulation\n",
@@ -105,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,55 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
-      "routes                                                          \n",
-      "east_to_north                0.0           0.0       0.000000   \n",
-      "east_to_south                0.0           0.0       0.000000   \n",
-      "east_to_west                 1.0           1.0       0.000000   \n",
-      "north_to_east                0.0           0.0       0.000000   \n",
-      "north_to_south               4.0           1.0       8.577890   \n",
-      "north_to_west                1.0           0.0       9.423480   \n",
-      "south_to_east                0.0           0.0       0.000000   \n",
-      "south_to_north              13.0           1.0       2.744039   \n",
-      "south_to_west                1.0           0.0       9.043985   \n",
-      "west_to_east                 1.0           1.0       0.000000   \n",
-      "west_to_north                7.0           6.0       2.503527   \n",
-      "west_to_south                4.0           3.0       2.861599   \n",
-      "\n",
-      "                accumulated_waiting_time  new_throughput  \n",
-      "routes                                                    \n",
-      "east_to_north                        0.0             0.0  \n",
-      "east_to_south                        0.0             0.0  \n",
-      "east_to_west                         3.0             0.0  \n",
-      "north_to_east                        0.0             0.0  \n",
-      "north_to_south                       3.0             0.0  \n",
-      "north_to_west                        0.0             0.0  \n",
-      "south_to_east                        0.0             0.0  \n",
-      "south_to_north                       6.0             0.0  \n",
-      "south_to_west                        0.0             0.0  \n",
-      "west_to_east                        43.0             0.0  \n",
-      "west_to_north                      106.0             0.0  \n",
-      "west_to_south                      135.0             0.0  , 'signal_state': 0, 'previous_signal_state': 0, 'previous_signal_active_time': 3, 'simulation_time': 180.0, 'reward': -13.0}\n",
-      "\n",
-      "            Total Time Steps: 180\n",
-      "            Previous Signal: rgrrrgrr\n",
-      "            Total Signal Changes: 79\n",
-      "            Total Throughput: 82.0\n",
-      "            Total Wait Time: 27851.0\n",
-      "            Total Reward: -1457.0\n",
-      "            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "observation = env.reset()\n",
     "\n",
@@ -222,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,55 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No simulation running.\n",
-      "saving observation file..\n",
-      "info: {'traffic':                 approaching_cars  stopped_cars  average_speed  \\\n",
-      "routes                                                          \n",
-      "east_to_north                0.0           0.0       0.000000   \n",
-      "east_to_south                0.0           0.0       0.000000   \n",
-      "east_to_west                 1.0           1.0       0.000000   \n",
-      "north_to_east                0.0           0.0       0.000000   \n",
-      "north_to_south               3.0           0.0       9.267559   \n",
-      "north_to_west                1.0           0.0      10.001836   \n",
-      "south_to_east                0.0           0.0       0.000000   \n",
-      "south_to_north               5.0           2.0       6.925669   \n",
-      "south_to_west                1.0           0.0      10.379301   \n",
-      "west_to_east                 0.0           0.0       0.000000   \n",
-      "west_to_north                1.0           0.0      12.789200   \n",
-      "west_to_south                1.0           0.0      12.015986   \n",
-      "\n",
-      "                accumulated_waiting_time  new_throughput  \n",
-      "routes                                                    \n",
-      "east_to_north                        0.0             0.0  \n",
-      "east_to_south                        0.0             0.0  \n",
-      "east_to_west                         4.0             0.0  \n",
-      "north_to_east                        0.0             0.0  \n",
-      "north_to_south                       0.0             0.0  \n",
-      "north_to_west                        0.0             0.0  \n",
-      "south_to_east                        0.0             0.0  \n",
-      "south_to_north                       6.0             0.0  \n",
-      "south_to_west                        0.0             0.0  \n",
-      "west_to_east                         0.0             0.0  \n",
-      "west_to_north                        0.0             0.0  \n",
-      "west_to_south                        0.0             0.0  , 'signal_state': 0, 'previous_signal_state': 2, 'previous_signal_active_time': 5, 'simulation_time': 180.0, 'reward': -13.0}\n",
-      "\n",
-      "            Total Time Steps: 180\n",
-      "            Previous Signal: rgrrrgrr\n",
-      "            Total Signal Changes: 82\n",
-      "            Total Throughput: 101.0\n",
-      "            Total Wait Time: 3196.0\n",
-      "            Total Reward: -5514.0\n",
-      "            \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "observation = env.reset()\n",
     "\n",
@@ -339,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +318,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observation = env.reset()\n",
+    "\n",
+    "while True:\n",
+    "    #observation = observation[np.newaxis, ...]\n",
+    "\n",
+    "    # action = env.action_space.sample()\n",
+    "    action, _states = model.predict(observation)\n",
+    "    observation, reward, done, info = env.step(float(action))\n",
+    "\n",
+    "    # env.render()\n",
+    "    if done:\n",
+    "        print(\"info:\", info)\n",
+    "        env.render()\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward 13 (Simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from final_simulation._env.real_intersection import RealIntersectionSimpleObs13\n",
+    "from final_simulation._sumo.simplest_intersection_simulation import SumoSimulationSimpleObs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sim time 1 minute\n",
+    "max_simulation_seconds = 180\n",
+    "\n",
+    "simulation = SumoSimulationSimpleObs(\n",
+    "    #sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo\",\n",
+    "    sumo_binary_path=\"C:\\\\Program Files (x86)\\\\Eclipse\\\\Sumo\\\\bin\\\\sumo-gui\",\n",
+    "    sumo_config_path=\"C:\\\\sumoconfig\\\\real_intersection.sumocfg\",\n",
+    "    signal_states=SignalStates\n",
+    ")\n",
+    "\n",
+    "env = RealIntersectionSimpleObs13(\n",
+    "    simulation=simulation,\n",
+    "    max_simulation_seconds=max_simulation_seconds\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model = PPO.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\ppo\\\\best_model.zip\")\n",
+    "#model = A2C.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\a2c\\\\best_model.zip\")\n",
+    "model = DQN.load(\"final_simulation\\\\_models\\\\reward_13\\\\simple\\\\dqn\\\\best_model.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,15 +401,15 @@
       "saving observation file..\n",
       "info: {'traffic':        stopped_cars\n",
       "entry              \n",
-      "east              3\n",
-      "north             3\n",
-      "south             2\n",
-      "west             11, 'signal_state': 0, 'previous_signal_state': 0, 'previous_signal_active_time': 2, 'simulation_time': 180.0, 'reward': -19.0}\n",
+      "east              1\n",
+      "north             4\n",
+      "south             1\n",
+      "west             15, 'signal_state': 2, 'previous_signal_state': 2, 'previous_signal_active_time': 6, 'simulation_time': 180.0, 'reward': -21.0}\n",
       "\n",
       "            Total Time Steps: 180\n",
-      "            Total Signal Changes: 53\n",
-      "            Total Throughput: 68\n",
-      "            Total Reward: -1253.0\n",
+      "            Total Signal Changes: 29\n",
+      "            Total Throughput: 83\n",
+      "            Total Reward: -1775.0\n",
       "            \n"
      ]
     }
