--- a/final_simulation/model_evaluation_static.ipynb
+++ b/final_simulation/model_evaluation_static.ipynb
@@ -109,11 +109,19 @@
     "        observation, reward, done, info = env.step(0)\n",
     "\n",
     "        data_store = info['traffic'].sum(axis=0).to_dict()\n",
-    "        for key, value in data_store.items():\n",
-    "            data_store[key] = [value]\n",
+    "        # for key, value in data_store.items():\n",
+    "        #     data_store[key] = [value]\n",
+    "\n",
     "        data_store['episode'] = [episode]\n",
     "        data_store['step'] = [step]\n",
+    "\n",
+    "        if info['previous_signal_state'] != info['signal_state']:\n",
+    "            data_store['signal_change'] = 1\n",
+    "        else:\n",
+    "            data_store['signal_change'] = 0\n",
+    "\n",
     "        step_traffic_df = pd.DataFrame(data=data_store)\n",
+    "        \n",
     "        info_df = pd.concat(\n",
     "            [info_df,step_traffic_df],\n",
     "            ignore_index=True\n",
@@ -309,6 +317,27 @@
    ],
    "source": [
     "info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Study\\RMIT\\2022\\COSC2793 - Computational Machine Learning\\Assignment02\\CML-Assign2\\final_simulation\\model_evaluation_static.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Study/RMIT/2022/COSC2793%20-%20Computational%20Machine%20Learning/Assignment02/CML-Assign2/final_simulation/model_evaluation_static.ipynb#ch0000006?line=0'>1</a>\u001b[0m info\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'info' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "info"
    ]
   },
   {
