--- a/final_simulation/model_training_sarsa.ipynb
+++ b/final_simulation/model_training_sarsa.ipynb
@@ -20353,44 +20353,15 @@
      "text": [
       "Episode:  1\n",
       "No simulation running.\n",
-      "Epsilon:  1\n",
       "saving observation file..\n",
       "Episode:  2\n",
       "No simulation running.\n",
-      "Epsilon:  0.8333333333333334\n",
       "saving observation file..\n",
       "Episode:  3\n",
       "No simulation running.\n",
-      "Epsilon:  0.6666666666666667\n",
       "saving observation file..\n",
       "Episode:  4\n",
-      "No simulation running.\n",
-      "Epsilon:  0.5000000000000001\n",
-      "saving observation file..\n",
-      "Episode:  5\n",
-      "No simulation running.\n",
-      "Epsilon:  0.3333333333333335\n",
-      "saving observation file..\n",
-      "Episode:  6\n",
-      "No simulation running.\n",
-      "Epsilon:  0.16666666666666682\n",
-      "saving observation file..\n",
-      "Episode:  7\n",
-      "No simulation running.\n",
-      "Epsilon:  1.6653345369377348e-16\n",
-      "saving observation file..\n",
-      "Episode:  8\n",
-      "No simulation running.\n",
-      "Epsilon:  -0.1666666666666665\n",
-      "saving observation file..\n",
-      "Episode:  9\n",
-      "No simulation running.\n",
-      "Epsilon:  -0.1666666666666665\n",
-      "saving observation file..\n",
-      "Episode:  10\n",
-      "No simulation running.\n",
-      "Epsilon:  -0.1666666666666665\n",
-      "saving observation file..\n"
+      "No simulation running.\n"
      ]
     }
    ],
